Games load change

--- a/public/games/snakegame/index.html
+++ b/public/games/snakegame/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <title>Snake Game</title>
+    <title>Lakshman | Snake Game</title>
     <link rel="icon" type="image/jpg" href="snakeGame.jpg" />
-    <meta name="viewport" content="user-scalable=no">
-    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.5"> -->
-    <script type="text/javascript" src="snake.js"></script>
-    <link rel="stylesheet" type="text/css" href="snake.css">
+    <!-- <meta name="viewport" content="user-scalable=no"> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script type="text/javascript" src="/games/snakeGame/snake.js"></script>
+    <link rel="stylesheet" type="text/css" href="/games/snakeGame/snake.css">
 </head>
 
 <body align="center">
