--- a/public/games/tic-tac-toe/index.html
+++ b/public/games/tic-tac-toe/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <head>
-    <title>TIC-TAC-TOE</title>
+    <title>Lakshman | TIC-TAC-TOE</title>
     <meta name="viewport" content="user-scalable=no">
-    <link rel="icon" type="image/png" href="/tic-tac-toe.png">
+    <link rel="icon" type="image/png" href="tic-tac-toe.png">
 </head>
 
 <body align="center">
@@ -43,8 +43,8 @@
     </table>
     <div id="div"></div>
     <input type="button" value="PRESS HERE TO START NEW GAME" onClick="window.location.reload()" id="end">
-    <link rel="stylesheet" type="text/css" href="/tic-tac-toe.css">
-    <script src="/tic-tac-toe.js"></script>
+    <link rel="stylesheet" type="text/css" href="/games/tic-tac-toe/tic-tac-toe.css">
+    <script src="/games/tic-tac-toe/tic-tac-toe.js"></script>
 </body>
 
 </html>
