--- a/public/games/snakegame/index.html
+++ b/public/games/snakegame/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/jpg" href="snakeGame.jpg" />
     <!-- <meta name="viewport" content="user-scalable=no"> -->
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script type="text/javascript" src="/games/snakeGame/snake.js"></script>
-    <link rel="stylesheet" type="text/css" href="/games/snakeGame/snake.css">
+    <script type="text/javascript" src="/games/snakeGame/snakegame.js"></script>
+    <link rel="stylesheet" type="text/css" href="/games/snakeGame/snakegame.css">
 </head>
 
 <body align="center">
