add load.js and image size reduce

--- a/public/games/flappybird/index.html
+++ b/public/games/flappybird/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="flappybird.css">
     <script type="text/javascript" src="/games/flappybird/flappybird.js"></script>
     <link rel="icon" type="image/png" href="/games/flappybird/flappybird.png">
+    <script type="text/javascript" src="/games/load.js"></script>
     <title>Lakshman | Flappy Bird</title>
 </head>
 
