--- a/public/games/minesweeper/index.html
+++ b/public/games/minesweeper/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Lakshman | Minesweeper</title>
     <link rel="shortcut icon" href="minesweeper.png" type="image/png">
+    <script type="text/javascript" src="/games/load.js"></script>
 </head>
 
 <body align="center">
