--- a/public/games/snakegame/index.html
+++ b/public/games/snakegame/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script type="text/javascript" src="/games/snakegame/snakegame.js"></script>
     <link rel="stylesheet" type="text/css" href="/games/snakegame/snakegame.css">
+    <script type="text/javascript" src="/games/load.js"></script>
 </head>
 
 <body align="center">
