--- a/public/games/tic-tac-toe/index.html
+++ b/public/games/tic-tac-toe/index.html
@@ -1,16 +1,17 @@
 <html>
-
+    
 <head>
     <title>Lakshman | TIC-TAC-TOE</title>
     <meta name="viewport" content="user-scalable=no">
     <link rel="icon" type="image/png" href="tic-tac-toe.png">
+    <script type="text/javascript" src="/games/load.js"></script>
 </head>
 
 <body align="center">
     <h1 align="center" class="head">TIC-TAC-TOE</h1>
     <div id="first"><span id="plrn">X<span> PLAYS FIRST</div>
-    <table align="center" class="tb1">
-        <tr>
+        <table align="center" class="tb1">
+            <tr>
             <td class="br bb"></td>
             <td class="bb"></td>
             <td class="bl bb"></td>
