--- a/public/games/escape/index.html
+++ b/public/games/escape/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/games/escape/escape.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script type="text/javascript" src="/games/escape/escape.js"></script>
+    <script type="text/javascript" src="/games/load.js"></script>
 </head>
 
 <body align="center">
