add numberClick game and extend home page

--- a/public/games/snakegame/index.html
+++ b/public/games/snakegame/index.html
@@ -4,7 +4,7 @@
     <title>Lakshman | Snake Game</title>
     <link rel="icon" type="image/jpg" href="snakeGame.jpg" />
     <!-- <meta name="viewport" content="user-scalable=no"> -->
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1" content="user-scalable=no">
     <script type="text/javascript" src="/games/snakegame/snakegame.js"></script>
     <link rel="stylesheet" type="text/css" href="/games/snakegame/snakegame.css">
     <script type="text/javascript" src="/games/load.js"></script>
