move numberclick to number

--- a/public/games/number/index.html
+++ b/public/games/number/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Lakshman | Number Click</title>
     <link rel="icon" type="image/png" href="numberclick.png" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" content="user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link rel="stylesheet" type="text/css" href="/games/numberclick/numberclick.css">
     <script type="text/javascript" src="/games/numberclick/numberclick.js"></script>
     <script type="text/javascript" src="/games/load.js"></script>
