--- a/public/games/minesweeper/index.html
+++ b/public/games/minesweeper/index.html
@@ -4,6 +4,7 @@
     <title>Lakshman | Minesweeper</title>
     <link rel="shortcut icon" href="minesweeper.png" type="image/png">
     <script type="text/javascript" src="/games/load.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 </head>
 
 <body align="center">
